<resources>
    <string name="app_name">С-М Весы</string>
    <string name="title_work">Измерение</string>
    <string name="title_connect">Подключение</string>
    <string name="title_weight_history">История взвешиваний:</string>
    <string name="weight_history_1_hint">Более ранние</string>
    <string name="weight_history_4_hint">Более поздние</string>
    <string name="ip_hint">IP адрес</string>
    <string name="port_hint">Порт</string>
    <string name="status_hint">Статус</string>
    <string name="test_button_text">Проверить подключение</string>
    <string name="confirm_button_text">Подключиться</string>
    <string name="no_scales_connected">Нет подключения к весам</string>
    <string name="dimension_kg">кг.</string>
    <string name="dimension_g">гр.</string>
</resources>