<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/scale_ip_address"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="ip"
        android:hint="@string/ip_hint"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/scale_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/scale_port"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="port"
        android:hint="@string/port_hint"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/scale_check_connection_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_ip_address"
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scale_check_connection_button"
        style="@style/button_general"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test_button_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/scale_check_connection_status"
        app:layout_constraintEnd_toStartOf="@id/scale_confirm_connection_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_port"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scale_confirm_connection_button"
        style="@style/button_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/confirm_button_text"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/scale_check_connection_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/scale_check_connection_button"
        app:layout_constraintTop_toTopOf="@id/scale_check_connection_button"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/scale_check_connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_hint"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_check_connection_button" />

</androidx.constraintlayout.widget.ConstraintLayout>